# Enterprise-RAG-Security

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
config/rails/: config.yml
src/rag_guardrails/: config.py  pipeline.py
src/rag_guardrails/api/: app.py  dependencies.py  schemas.py
src/rag_guardrails/auth/: models.py
src/rag_guardrails/llm/: provider.py
src/rag_guardrails/retrieval/: embeddings.py  vector_store.py
src/rag_guardrails/security/: access_control.py  guardrails.py
tests/: conftest.py  test_access_control.py  test_api.py  test_config.py  test_llm_provider.py  test_pipeline.py  test_vector_store.py
