[project]
name = "rag-security-guardrails"
version = "0.1.0"
description = "Permission-aware RAG query layer with NeMo Guardrails over Project 1's pgvector store"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cloud-sql-python-connector[pg8000]>=1.20.4",
    "fastapi>=0.115.6",
    "google-cloud-aiplatform>=1.161.0",
    "langchain-openai>=0.3.0",
    "nemoguardrails>=0.11.1",
    "openai>=1.55.0",
    "pgvector>=0.5.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.34.0",
]

[project.scripts]
rag = "main:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=0.25.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
